<resources>
    <string name="app_name">Edukatrip</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="trips">Trips</string>
    <string name="inbox">Inbox</string>
    <string name="setting">Setting</string>
    <string name="what_can_we_help_you">What can we help you find?</string>
    <string name="educational_tour">Educational Tour</string>
    <string name="create_your_own_tour">Create your own Tour</string>
    <string name="promotions_and_best_deals"><![CDATA[Promotions & Best Deals]]></string>
    <string name="favorited_tour_types">Favorited Tour Types</string>
    <string name="best_rated_trip_just_for_you">Best rated trip just for you!</string>
    <string name="trip_to_best_uni_bandung">A Trip to the Best Universities in Bandung</string>
    <string name="bandung_uni_trip">Bandung University Trip</string>
    <string name="best_price_edu_tour_in_bandung">Best Price Educational Tour in Bandung</string>
    <string name="best_rated_edu_tour_in_bandung">Best Rated Educational Tour in Bandung</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experience">Experience</string>
    <string name="user">User</string>
    <string name="recent_tour">Recent Tour</string>
    <string name="limited_tour_you_can_enjoy">Limited tour you can enjoy!</string>
    <string name="favorite_tour">Favorite Tour</string>
    <string name="please_review_booking">Please review your booking details before continuing to payment</string>
    <string name="title_of_tour">Title of Tour</string>
    <string name="cancelation_policy">Cancelation Policy Applies</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer ID</string>
    <string name="price_details">Price Details</string>
    <string name="tax">Tax</string>
    <string name="included">Included</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="please_fill_out_form">Please Fill out the Form</string>
    <string name="destination">Destination</string>
    <string name="include_travel_time">Include the travel from previous destination to this destination to the timeline</string>
    <string name="view_report">View Report</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil</string>
    <string name="pembayaran_terverifikasi">Pembayaran anda telah terverifikasi</string>

    <!-- Custom Calendar View -->
    <!-- Weekday -->
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <!-- Month-->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="desember">Desember</string>


    <!-- Button -->
    <string name="show_all">Show All</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Konfirmasi Password</string>
    <string name="prompt_mobile">Mobile Phone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="forgot_password">Forgotten Password?</string>
    <string name="stay_logged_in">Stay Logged In</string>

    <!-- Deatil Wisata -->
    <string name="real_view">Real View</string>
    <string name="tour">Tour</string>
    <string name="facilities">Facilities</string>
    <string name="bathroom">Bathroom</string>
    <string name="parking">Parking</string>
    <string name="mosque">Mosque</string>
    <string name="food_stalls">Food Stalls</string>
    <string name="easy_access">Easy Access</string>
    <string name="ratings_and_reviews">Rating &amp; Reviews</string>
    <string name="about_tour">About Tour</string>
    <string name="see_details">See Details</string>

    <!-- Adapter View Item -->
    <string name="total_cost"><b>Total Cost</b></string>
    <string name="per_person">/ person</string>
    <string name="choose_location">Choose Location</string>

    <!--Choose What You Need -->
    <string name="choose_what_you_need">Choose What You Need</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="tour_guide_detail">A person that will take you to your destination while giving you knowledge about the destination.</string>
    <string name="driver">Driver</string>
    <string name="driver_detail">A person that will take you to your destination</string>

    <!-- Choose Payment -->
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="saved_cards">Saved_Cards</string>
    <string name="debit_credit_cards">Debits/Credit Card</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="minimarket">Minimarket</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="bank_transfer_text">If you choose bank transfer, you will transfer only to bank listed below</string>
    <string name="bank_transfer_text2">All bank account name is PT. Edukatrip</string>
    <string name="more">More</string>

    <!-- Detail Edu Tour -->
    <string name="university_edu_tour">UNIVERSITY - EDUCATIONAL TOUR</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="what_youll_do">What you\'ll do </string>
    <string name="what_we_provide">What we\'ll provide </string>
    <string name="tour_timeline">Tour Timeline</string>
    <string name="tour_track">Tour Track</string>
    <string name="terms_policy">Terms &amp; Policy</string>
    <string name="cancellation">Cancellation</string>
    <string name="requirements">Requirements</string>
    <string name="payments">Payments</string>

    <!-- Fragments -->
    <string name="mau_pergi_kemana">Mau Pergi Kemana ?</string>
    <string name="search_tour_package">Search Tour Package</string>
    <string name="berapa_lama">Berapa Lama Waktu Trip Kamu ?</string>
    <string name="berapa_jumlah">Berapa Jumlah Orang Dalam Trip Kamu ?</string>
    <string name="jenis_trip_apa">Jenis Trip Apa Yang Kamu Mau ?</string>
    <string name="next">Next</string>
    <string name="skip_this"><u>Skip this, I want to search for myself ></u></string>
    <string name="swipe_untuk">*swipe untuk mengganti</string>


    <!-- Payment Activity -->
    <string name="total">Total</string>
    <string name="method">Method</string>
    <string name="please_do">Please do the transfer before</string>
    <string name="transfer_to">Transfer to</string>
    <string name="copy_account_number">Copy Account Number</string>
    <string name="copy_amount">Copy Amount</string>
    <string name="amount_to_transfer">Amount to be transfered</string>
    <string name="please_transfer">Please transfer <b>until the last 3 digits</b> </string>
    <string name="different_number">Different number will make the verification process delayed</string>
    <string name="i_already_transfered">I Already Transfered</string>

    <!-- Add Next Destination Activity -->
    <string name="please_fill">Please Fill out the Form</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="destintaion">Destination</string>
    <string name="add_description">Add Description</string>
    <string name="input_time">Input Time</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="add_to_next_destination">Add to Next Destination</string>
    <string name="include_travel">Include the travel from previous destination to this destination to the timeline</string>

    <!-- Book Tour -->
    <string name="date_of_tour">Date of Tour</string>
    <string name="total_person">Total Person</string>
    <string name="book_this_tour">Book This Tour</string>
    <string name="pax_inclusive">/pax inclusive of Tax</string>
    <!-- DUMMY -->
    <string-array name="spinner_item">
        <item>Select an option</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
    </string-array>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus ligula. Suspendisse sit amet suscipit quam. In ante nulla, finibus id rutrum id, aliquet sed nulla. Curabitur turpis purus, gravida vel ex porta, consectetur aliquet leo. Pellentesque at felis pellentesque, lobortis est vel, tristique nisi. In hac habitasse platea dictumst. Maecenas blandit vitae ex a malesuada. Proin rutrum non ante in auctor. Sed vestibulum luctus ante, id tempus urna faucibus id. Sed quis urna metus. Vivamus ipsum ante, lacinia ut dolor a, ornare rhoncus justo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="create_tour">Create Tour</string>
    <string name="choose_the_next">Choose the Next</string>
    <string name="add_next_destination">Add Next Destination</string>
    <string name="end_tour">End Tour</string>
    <string name="edit">Edit</string>
    <string name="change_pp">Change Profile Pictures</string>
    <string name="contact">Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="info">Info</string>
    <string name="facebook">Facebook</string>
    <string name="not_connected">Not Connected</string>
    <string name="google">Google</string>
    <string name="connected">Connected</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="add_new_account">Add New Account</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="my_trip">My Trip</string>
    <string name="my_point">My Points</string>
    <string name="promotions">Promotions</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="informations">Informations</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="daily">Daily</string>
    <string name="messages">Messages</string>
    <string name="deals_and_promotions">Deals &amp; Promotions</string>
    <string name="choose_tour_guide">Choose Tour Guide</string>

</resources>
