<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_transaction"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/transaction" />
    <item
        android:id="@+id/nav_trips"
        android:icon="@drawable/compass"
        android:title="@string/trips" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbox" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/more" />
</menu>