<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bulan"
            android:layout_marginStart="17dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_toEndOf="@id/month"
            android:text="2019"
            android:layout_centerVertical="true"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/btnPrevMonth"
            android:layout_toStartOf="@id/btnNextMonth"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_left" />
        <ImageView
            android:id="@+id/btnNextMonth"
            android:layout_width="50dp"
            android:layout_alignParentEnd="true"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right_blue" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/header">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/sun" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/mon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/tue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/wed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/fri" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/thu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/sat" />

    </LinearLayout>
    <GridView
        android:id="@+id/date"
        android:layout_below="@id/week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:verticalSpacing="10dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_below="@id/date"
        android:layout_width="match_parent"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_height="2dp"
        android:background="@color/darkgray"/>


</RelativeLayout>