<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/choose_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/jenis_trip_apa"
            android:textSize="@dimen/exlargeText"
            android:maxLines="2"
            android:maxWidth="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/choose_type_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_untuk"
            android:textSize="@dimen/exsmallText"
            android:textColor="@color/info"
            app:layout_constraintTop_toBottomOf="@id/choose_type_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/choose_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="50dp"
            android:entries="@array/spinner_item"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text_book_tour"
            app:layout_constraintEnd_toEndOf="parent"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@id/choose_type_text2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/choose_type_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:background="@drawable/btn_round_corner"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:text="@string/next"
            app:layout_constraintTop_toBottomOf="@id/choose_type_spinner"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_this"
            app:layout_constraintTop_toBottomOf="@id/choose_type_btn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>